data/derived/sp14/progs/unify/prog2915.ml.out
Characters 78-80:
  | Sine(a) -> sin(pi*a)
                   ^^
Error: This expression has type float but an expression was expected of type
         int
